[tool.poetry]
name = "tanita"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "==2019.11.28"
chardet = "==3.0.4"
click = "==7.1.1"
idna = "==2.9"
requests = "==2.23.0"
typed-ast = "==1.4.1"
urllib3 = "==1.25.8"
python-dateutil = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
